--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
             <img src="images/my-bg (2).png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/q-removebg-preview.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>
+                jsdrigeriohgy9e5rgergyoiy5eiogyjeeoirjygoerngjrugoier
+                srjgoejyerkghrjgeyhgkfdjsogrdsghipsjugposr
+                sfghreiohgoiregyerjtre
+            </p>
+            <a href="https://facebook.com/ahad.stark" class=" link-button" target="_blank">Download Resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
