--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="topbanner">
+    <section class="topbanner flex-container">
         <div class="half-width">
             <h1>Welcome</h1>
             <h1><span class="orange-color">Hello My</span> World</h1>
@@ -26,7 +26,7 @@
             <img src="images/my-bg (2).png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flex-container">
         <div class="half-width">
             <img src="images/q-removebg-preview.png" alt="">
         </div>
@@ -40,8 +40,35 @@
             </p>
             <a href="https://facebook.com/ahad.stark" class=" link-button" target="_blank">Download Resume</a>
         </div>
-
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+
+        <section class="flex-container">
+            <div id="full-stack" class="experience-item">
+                <h2>Full Stack Web eveloper</h2>
+                <h3 class="orange-color">2022- Lifetime| Web</h3>
+                <p>fdshgsruihgrbsdhgowerihtgfiojrhgrjwgikrf
+                    gfgtdhyjyruyljtrhyt
+                    frgjyoirekjndgkynrwektgjy
+                </p>
+            </div>
+            <div id="baby-dev" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022- 2024| Hero Learner</h3>
+                <p>
+                    fdshgsruihgrbsdhgowerihtgfiojrhg
+                    rjwgikrfgfgtdhyjyruyljtrhyt
+                    frgjyoirekjndgkynrwektgjy
+                </p>
+            </div>
+        </section>
+    </section>
+    <footer>
+        <p>
+            copyright: Md. Abdul Ahad
+        </p>
+    </footer>
 </body>
 
 </html>
